tweak with findbugs result